Legibility issues

--- a/src/afch.css
+++ b/src/afch.css
@@ -53,7 +53,7 @@
 }
 
 #afchHeader {
-	font-size: 65px;
+	font-size: 60px;
 	color: #FFFFFF;
 	font-weight: bold;
 	text-align: right;
